--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "y18n": "^4.0.1"
   },
   "browserslist": [
     "last 1 version",
@@ -44,7 +45,6 @@
     "webpack:watch": "webpack --watch --config webpack.dev.js",
     "webpack:build": "webpack --config webpack.prod.js  --optimize-minimize"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gmcln-rct/seaorgan.git"
